--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ before_install:
   - sudo apt-get install -y libevent-dev
   - sudo apt-get install -y uuid-dev
   - sudo apt-get install -y python-sphinx
+  - sudo apt-get install -y libhiredis-dev
 
 script:
   - ./bootstrap.sh -a
