test gcc 4.8 on travis
this PR adss gcc 4.8 builds on travis.

Signed-off-by: Sven Nierlein <sven@nierlein.de>

--- a/.travis.yml
+++ b/.travis.yml
@@ -63,6 +63,18 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
           packages:
+            - gcc-4.8
+            - g++-4.8
+        artifacts: true
+      env:
+        - MATRIX_EVAL="CC=gcc-4.8 && CXX=g++-4.8"
+    - compiler: gcc
+      dist: trusty
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
             - gcc-4.9
             - g++-4.9
         artifacts: true
