--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: install dependencies
+      run: apt-get install -y -f libboost-all-dev gperf libevent-dev uuid-dev python-sphinx libhiredis-dev gcc g++
     - name: bootstrap
       run: ./bootstrap.sh
     - name: configure
