Fixing Makefile.am for HACKING rename

--- a/Makefile.am
+++ b/Makefile.am
@@ -68,7 +68,7 @@ TESTS += $(bin_PROGRAMS)
 TESTS += $(check_PROGRAMS)
 XFAIL_TESTS += $(bin_PROGRAMS)
 
-EXTRA_DIST+= HACKING
+EXTRA_DIST+= CONTRIBUTING.md
 EXTRA_DIST+= README.md
 EXTRA_DIST+= scripts/README.solaris
 
