--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,7 +13,7 @@ jobs:
 
     runs-on: ${{ matrix.config.os }}
 
-    container: gcc:${{ matrix.config.tag }}
+#    container: gcc:${{ matrix.config.tag }}
 
     strategy:
       fail-fast: false
