--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,4 +1,4 @@
-name: C/C++ CI
+name: GitHub CI
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
 
-    name: ${{ matrix.config.os }} ${{ matrix.config.cc }} ${{ matrix.config.tag }}
+    name: ${{ matrix.config.os }} ${{ matrix.config.cc }}-${{ matrix.config.tag }}
 
     runs-on: ${{ matrix.config.os }}
 
@@ -17,13 +17,14 @@ jobs:
       fail-fast: false
       matrix:
         config:
-#          - {os: ubuntu-16.04, cc: 'gcc', cxx: 'g++', tag: '4.8'}
-#          - {os: ubuntu-16.04, cc: 'gcc', cxx: 'g++', tag: '4.9'}
+          - {os: ubuntu-latest, container: ubuntu:16.04, cc: 'gcc', cxx: 'g++', tag: '4.8'}
+          - {os: ubuntu-latest, container: ubuntu:16.04, cc: 'gcc', cxx: 'g++', tag: '4.9'}
           - {os: ubuntu-18.04, cc: 'gcc', cxx: 'g++', tag: '5'}
           - {os: ubuntu-18.04, cc: 'gcc', cxx: 'g++', tag: '6'}
           - {os: ubuntu-18.04, cc: 'gcc', cxx: 'g++', tag: '7'}
           - {os: ubuntu-18.04, cc: 'gcc', cxx: 'g++', tag: '8'}
           - {os: ubuntu-20.04, cc: 'gcc', cxx: 'g++', tag: '9'}
+          - {os: ubuntu-20.04, cc: 'gcc', cxx: 'g++', tag: '10'}
 
     env:
       CC: ${{ matrix.config.cc }}-${{ matrix.config.tag }}
