--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -35,14 +35,16 @@ jobs:
     - uses: actions/checkout@v2
     - name: if running in a container, update and install sudo and other basics
       if: matrix.config.container != ''
-      run: |
-          apt-get -o Acquire::Retries=3 update && DEBIAN_FRONTEND=noninteractive apt-get -o Acquire::Retries=3 -y install tzdata sudo apt-transport-https make apt-file software-properties-common libssl-dev build-essential autotools-dev autoconf automake pkgconf
-          sudo apt-add-repository ppa:git-core/ppa
-          sudo apt-get -o Acquire::Retries=3 update && apt-get -o Acquire::Retries=3 -y install git
+      run: apt-get -o Acquire::Retries=3 update && DEBIAN_FRONTEND=noninteractive apt-get -o Acquire::Retries=3 -y install tzdata sudo apt-transport-https make apt-file software-properties-common libssl-dev build-essential autotools-dev autoconf automake pkgconf
     - name: install dependencies
       run: sudo apt-get -o Acquire::Retries=3 install -y libboost-all-dev gperf libevent-dev uuid-dev sphinx-doc sphinx-common libhiredis-dev ${{ matrix.config.cc }}-${{ matrix.config.tag }} ${{ matrix.config.cxx }}-${{ matrix.config.tag }}
     - name: bootstrap
-      run: ./bootstrap.sh -a
+      run: |
+           if test -n "$GHA_CONTAINER"; then
+              ./bootstrap.sh
+           else
+              ./bootstrap.sh -a
+           fi
     - name: configure
       run: ./configure --enable-ssl
     - name: make
