--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -17,8 +17,8 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {name: 'ubuntu-16.04 gcc-4.8', os: ubuntu-latest, container: 'ubuntu:16.04', cc: 'gcc', cxx: 'g++', tag: '4.8'}
-          - {name: 'ubuntu-16.04 gcc-4.9', os: ubuntu-latest, container: 'ubuntu:16.04', cc: 'gcc', cxx: 'g++', tag: '4.9'}
+          - {name: 'ubuntu-14.04 gcc-4.8', os: ubuntu-latest, container: 'ubuntu:16.04', cc: 'gcc', cxx: 'g++', tag: '4.8'}
+          - {name: 'ubuntu-14.04 gcc-4.9', os: ubuntu-latest, container: 'ubuntu:16.04', cc: 'gcc', cxx: 'g++', tag: '4.9'}
           - {name: 'ubtunu-18.04 gcc-5', os: ubuntu-18.04, cc: 'gcc', cxx: 'g++', tag: '5'}
           - {name: 'ubtunu-18.04 gcc-6', os: ubuntu-18.04, cc: 'gcc', cxx: 'g++', tag: '6'}
           - {name: 'ubtunu-18.04 gcc-7', os: ubuntu-18.04, cc: 'gcc', cxx: 'g++', tag: '7'}
@@ -38,13 +38,14 @@ jobs:
           apt-get -o Acquire::Retries=3 update && DEBIAN_FRONTEND=noninteractive apt-get -o Acquire::Retries=3 -y install tzdata sudo apt-transport-https make apt-file software-properties-common libssl-dev build-essential autotools-dev autoconf automake pkgconf
           sudo apt-add-repository ppa:git-core/ppa
           sudo apt-get -o Acquire::Retries=3 update && apt-get -o Acquire::Retries=3 -y install git
-    - name: install dependencies
-      run: sudo apt-get -o Acquire::Retries=3 install -y libboost-all-dev libboost-program-options-dev gperf libevent-dev uuid-dev sphinx-doc sphinx-common libhiredis-dev ${{ matrix.config.cc }}-${{ matrix.config.tag }} ${{ matrix.config.cxx }}-${{ matrix.config.tag }}
     - uses: actions/checkout@v2
+    - name: install dependencies
+      run: sudo apt-get -o Acquire::Retries=3 install -y libboost-all-dev gperf libevent-dev uuid-dev sphinx-doc sphinx-common libhiredis-dev ${{ matrix.config.cc }}-${{ matrix.config.tag }} ${{ matrix.config.cxx }}-${{ matrix.config.tag }}
     - name: bootstrap
       run: |
            if [ -n "$GHA_CONTAINER" ]; then
               echo "container: $GHA_CONTAINER"
+              sudo apt-get install -y libboost-program-options-dev
            fi
            cat /etc/lsb-release
            ./bootstrap.sh -a
