--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -43,6 +43,7 @@ jobs:
       run: |
           sudo apt-add-repository ${{ matrix.config.toolchain }}
           sudo apt-get update
+          sudo apt-get -y install libtool
     - uses: actions/checkout@v2
     - name: install dependencies
       run: sudo apt-get -o Acquire::Retries=3 install -y libboost-all-dev gperf libevent-dev uuid-dev sphinx-doc sphinx-common libhiredis-dev ${{ matrix.config.cc }}-${{ matrix.config.tag }} ${{ matrix.config.cxx }}-${{ matrix.config.tag }}
