Display the test-suite.log to help troubleshoot test failures.

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -61,4 +61,8 @@ jobs:
     - name: make
       run: ${CC} --version && make
     - name: make test
-      run: ${CC} --version && make test
+      run: |
+           ${CC} --version && make test
+           if [ -f "./test-suite.log" ]; then
+              cat ./test-suite.log
+           fi
