Another attempt to display the test-suite.log to help troubleshoot test failures.

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -63,6 +63,7 @@ jobs:
     - name: make test
       run: |
            ${CC} --version && make test
+           cat test-suite.log
            if [ -f "./test-suite.log" ]; then
               cat ./test-suite.log
            fi
