(Yet another attempt)^2 to display the test-suite.log to help troubleshoot test failures. (Argh!)

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -63,8 +63,10 @@ jobs:
     - name: make test
       run: ${CC} --version && make test
     - name: check test-suite.log
+      if: always()
       run: |
-           cat test-suite.log
            if [ -f "./test-suite.log" ]; then
-              cat ./test-suite.log
+              cat ./test-suite.log;
+           else
+              echo "No test-suite.log file found."
            fi
