--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -44,6 +44,8 @@ jobs:
       run: |
         cat /etc/hosts
         echo "==="
+        ip addr
+        echo "==="
         echo "'hostname -i' shows '$(hostname -i)'"
         echo "'hostname -I' shows '$(hostname -I)'"
         hostname_short=$(hostname -s)
@@ -52,7 +54,7 @@ jobs:
           actual_ip=$(ip -4 addr show dev eth0 | grep -o 'inet [0-9.]*' | cut -f2 -d ' ')
           echo "Setting $hostname_long / $hostname_short to $actual_ip in /etc/hosts"
           echo "$actual_ip $hostname_long $hostname_short" | sudo tee -a /etc/hosts
-          ip -br addr
+          ip addr
           echo "'hostname -i' shows '$(hostname -i)'"
           echo "'hostname -I' shows '$(hostname -I)'"
         fi
