--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -59,12 +59,6 @@ jobs:
         echo "'hostname -I' shows '$(hostname -I)'"
         echo "'hostname -s' shows '$(hostname -s)'"
         echo "'hostname -f' shows '$(hostname -f)'"
-        echo "==="
-        echo "Changing multi_client_test.cc..."
-        sed -i -e 's/\(test->push_port(\)[^)]*\();\)/\1 19298 \2/' tests/libgearman-1.0/multi_client_test.cc
-        sed -i -e 's/\(test->push_port(\)[^)]*\();\)/\1 19300 \2/' tests/libgearman-1.0/multi_client_test.cc
-        echo "After multi_client_test.cc:"
-        grep push_port tests/libgearman-1.0/multi_client_test.cc
     - name: configure toolchain (optional)
       if: matrix.config.toolchain != ''
       run: |
@@ -72,6 +66,17 @@ jobs:
           sudo apt-get update
           sudo apt-get -y install libtool
     - uses: actions/checkout@v2
+    - name: tweak multi_client_test.cc for container usage
+      if: matrix.config.container == 'ubuntu:14.04'
+      run: |
+        echo "==="
+        pwd
+        ls -l
+        echo "Changing multi_client_test.cc..."
+        sed -i -e 's/\(test->push_port(\)[^)]*\();\)/\1 19298 \2/' tests/libgearman-1.0/multi_client_test.cc
+        sed -i -e 's/\(test->push_port(\)[^)]*\();\)/\1 19300 \2/' tests/libgearman-1.0/multi_client_test.cc
+        echo "After multi_client_test.cc:"
+        grep push_port tests/libgearman-1.0/multi_client_test.cc
     - name: install dependencies
       run: sudo apt-get -o Acquire::Retries=3 install -y libboost-all-dev gperf libevent-dev uuid-dev sphinx-doc sphinx-common libhiredis-dev ${{ matrix.config.cc }}-${{ matrix.config.tag }} ${{ matrix.config.cxx }}-${{ matrix.config.tag }}
     - name: bootstrap
