Include missing libboost files in tarball

--- a/Makefile.am
+++ b/Makefile.am
@@ -50,6 +50,7 @@ include benchmark/include.am
 include bin/include.am
 include examples/include.am
 include gearmand/include.am
+include libboost/include.am
 include libgearman-server/include.am
 include libgearman/include.am
 include libgearman-1.0/include.am
