--- a/docker/example/gearmand/gearmand.conf
+++ b/docker/example/gearmand/gearmand.conf
@@ -1,8 +1,8 @@
 [program:gearmand]
 user = gearman
 priority = 100
-###command = /sbin/gearmand --port 4730 --ssl --ssl-ca-file /var/lib/gearman/gearmand-ca.pem --ssl-certificate /var/lib/gearman/gearmand.pem --ssl-key /var/lib/gearman/gearmand.key --verbose INFO -l /var/log/gearmand.log
-command = /sbin/gearmand --port 4730 --verbose INFO -l /var/log/gearman.log
+###command = /usr/sbin/gearmand --port 4730 --ssl --ssl-ca-file /var/lib/gearman/gearmand-ca.pem --ssl-certificate /var/lib/gearman/gearmand.pem --ssl-key /var/lib/gearman/gearmand.key --verbose INFO -l /var/log/gearmand.log
+command = /usr/sbin/gearmand --port 4730 --verbose INFO -l /var/log/gearman.log
 redirect_stderr = true
 stdout_logfile = /var/log/supervisor/gearman.log
 stdout_logfile_maxbytes = 50MB
